[gd_scene load_steps=12 format=2]

[ext_resource path="res://Spritesheets/Alien/alien_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Alien.gd" type="Script" id=2]
[ext_resource path="res://Textures/light_texture.png" type="Texture" id=3]
[ext_resource path="res://SoundEffects/step.wav" type="AudioStream" id=4]
[ext_resource path="res://SoundEffects/noticed.wav" type="AudioStream" id=5]
[ext_resource path="res://Spritesheets/Alien/exclamation.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.33333
height = 1.33333

[sub_resource type="Animation" id=2]
loop = true
step = 0.33
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.33, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
loop = true
step = 0.33
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.33, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "exclamation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 0, -15 ), Vector2( 0, -10 ) ]
}

[node name="Alien" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 3 )
scale = Vector2( 1.5, 1.5 )
z_index = 1
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
vframes = 3
hframes = 3
frame = 6
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "Idle"
anims/Back = SubResource( 2 )
anims/Front = SubResource( 3 )
anims/Idle = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.03
color = Color( 0.956863, 0.00784314, 0.00784314, 0.615686 )
energy = 2.0
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0.576471 )
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="StepSound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 4 )
volume_db = 10.0
pitch_scale = 0.67
attenuation = 11.3137
bus = "SoundEffects"
__meta__ = {
"_edit_lock_": true
}

[node name="NoticedSound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 5 )
volume_db = -4.289
pitch_scale = 0.75
attenuation = 2.14355
bus = "SoundEffects"
__meta__ = {
"_edit_lock_": true
}

[node name="ExclamationMark" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -10 )
z_index = 2
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ExclamationMark"]
autoplay = "exclamation"
anims/exclamation = SubResource( 5 )
[connection signal="timeout" from="ButtonTimer" to="." method="_want_to_press"]
[connection signal="timeout" from="StepTimer" to="." method="_activate_step"]
